--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "2017_11_00_scoreboard_api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ClarkWalker/2017_11_00_scoreboard_api/issues"
   },
