--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "knex": "^0.14.1",
+    "method-override": "^2.3.10",
     "nodemon": "^1.12.1",
     "pg": "^7.4.0"
   }
